--- a/LocationVoitureApi/appsettings.json
+++ b/LocationVoitureApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "key": "G79hgmEW/gaVTVIxu1n7jmjH0f0Sye8N2qzEINIMcsE=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 10
+  }
 }
