--- a/LocationVoitureApi/appsettings.json
+++ b/LocationVoitureApi/appsettings.json
@@ -9,7 +9,6 @@
   "JWT": {
     "key": "G79hgmEW/gaVTVIxu1n7jmjH0f0Sye8N2qzEINIMcsE=",
     "Issuer": "SecureApi",
-    "Audience": "SecureApiUser",
-    "DurationInDays": 10
+    "Audience": "SecureApiUser"
   }
 }
