--- a/LocationVoitureApi/appsettings.json
+++ b/LocationVoitureApi/appsettings.json
@@ -10,5 +10,8 @@
     "key": "G79hgmEW/gaVTVIxu1n7jmjH0f0Sye8N2qzEINIMcsE=",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser"
+  },
+  "Connection": {
+    "string": "Host=localhost;Port=5432;Username=postgres;Password=pass;Database=voitureloc;"
   }
 }
